fix: árquivos docker movidos da solutionpara dentro do projeto

--- a/ApiRest-NET9.csproj
+++ b/ApiRest-NET9.csproj
@@ -24,7 +24,7 @@
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
+        <Link>docker\.dockerignore</Link>
       </Content>
     </ItemGroup>
 
