--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,1 +1,7 @@
-﻿
+﻿FROM mcr.microsoft.com/mssql/server:2025-latest
+
+ENV ACCEPT_EULA=Y \
+    MSSQL_SA_PASSWORD=YourPassword123! \
+    MSSQL_PID=Developer
+
+EXPOSE 1433
