feat: Multi-Stage Dockerfile criado, otimizando a memória do container que roda a API

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,30 +1,23 @@
-﻿# docker/Dockerfile-api
+﻿# imagem runtime (final)
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
+ENV ASPNETCORE_URLS=http://+:8080
 
+# imagem com SDK usada apenas para compilar/publish
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# copiar o .csproj (caminho relativo ao build context: ..)
+# copiar o csproj primeiro para aproveitar cache do docker
 COPY ["ApiRest-NET9.csproj", "./"]
 RUN dotnet restore "ApiRest-NET9.csproj"
 
-# copiar todo o resto do contexto
+# copiar restante do código e publicar (sempre Release)
 COPY . .
+RUN dotnet publish "ApiRest-NET9.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# se o projeto estiver na raiz, mantenha /src como workdir; se estiver em subpasta, ajuste
-WORKDIR "/src"
-RUN dotnet build "ApiRest-NET9.csproj" -c $BUILD_CONFIGURATION -o /app/build
-
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "ApiRest-NET9.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
+# imagem final apenas com runtime
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "ApiRest-NET9.dll"]
