feat: CreateProjectDto, UpdateProjectDto e IProjectInterface criadas!

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,23 +1,27 @@
-﻿# imagem runtime (final)
+﻿# Base para rodar a aplicação
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 EXPOSE 8080
 ENV ASPNETCORE_URLS=http://+:8080
 
-# imagem com SDK usada apenas para compilar/publish
+# Imagem para build
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
-# copiar o csproj primeiro para aproveitar cache do docker
+# copiar o csproj e restaurar dependências
 COPY ["ApiRest-NET9.csproj", "./"]
 RUN dotnet restore "ApiRest-NET9.csproj"
 
-# copiar restante do código e publicar (sempre Release)
+# copiar o resto do código e compilar
 COPY . .
+RUN dotnet build "ApiRest-NET9.csproj" -c Release -o /app/build
+
+# estágio para publish
+FROM build AS publish
 RUN dotnet publish "ApiRest-NET9.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# imagem final apenas com runtime
+# estágio final: runtime enxuto
 FROM base AS final
 WORKDIR /app
-COPY --from=build /app/publish .
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "ApiRest-NET9.dll"]
